--- a/alloctrackSample/build.gradle
+++ b/alloctrackSample/build.gradle
@@ -15,10 +15,22 @@ android {
             }
         }
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                abiFilters "armeabi-v7a","x86"
+                // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
+            }
+        }
+        debug {
+            minifyEnabled false
+            ndk {
+                abiFilters "armeabi-v7a","x86"
+                // 指定要ndk需要兼容的架构(这样其他依赖包里mips,x86,armeabi,arm-v8之类的so会被过滤掉)
+            }
         }
     }
     externalNativeBuild {
@@ -26,6 +38,7 @@ android {
             path "src/main/cpp/CMakeLists.txt"
         }
     }
+    ndkVersion "19.2.5345600"
 }
 
 dependencies {
